[package]
name = "xdg-desktop-entry"
version = "0.1.0"
authors = ["Richard Liebscher <richard.liebscher@gmail.com>"]
edition = "2018"

[dev-dependencies]
assert_matches = "^1.3"
indoc = "^0.3"
maplit = "^1.0"

[dependencies]
nom = { version = "6", default-features = false, features = ["alloc"] }
dirs = "2.0"
